--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <a href="#contact" class="btn btn-outline">Our History</a>
                 </div>
                 <div style="flex: 1; min-width: 300px; position: relative;">
-                    <img src="https://images.unsplash.com/photo-1599058917232-d750c1859d7c?auto=format&fit=crop&q=80&w=1000" alt="Athletic Training" style="border-radius: 4px; box-shadow: var(--shadow-lg);">
+                    <img src="ChatGPT Image Feb 13, 2026, 11_14_12 AM.png" alt="Athletic Training" style="border-radius: 4px; box-shadow: var(--shadow-lg);">
                     <div style="position: absolute; bottom: -30px; right: -30px; background: var(--accent); padding: 2rem; border-radius: 4px; color: white;">
                         <p style="font-size: 1.5rem; font-weight: 800;">"NO LIMITS"</p>
                         <p style="font-size: 0.8rem; opacity: 0.8;">ELITE ARENA MODUS</p>
